List Collection of Cars with Functional Navigation

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -3,6 +3,6 @@
 
 <h1>About the Car Collector</h1>
 <hr />
-<p>Hire the Car Collector!</p>
+<p>Check out the Collection of Jdm Legends!</p>
 
 {% endblock %}
