--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -12,3 +12,9 @@ body {
     padding-top: 0;
     text-align: right;
 }
+div.nav-wrapper {
+background-color: lightslategray;
+}
+footer.page-footer {
+  background-color: lightslategray;
+}
