--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,7 +20,7 @@
         <ul class="right">
           <li><a href="/about">About</a></li>
           <!-- new markup below-->
-          <li><a href="/cats">Garage</a></li>
+          <li><a href="/cars">Garage</a></li>
         </ul>
       </div>
     </nav>
