--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,14 +8,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Car Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
   <header class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper blue-grey darken-3">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;CarCollector</a></li>
+          <li><a href="/" class="left brand-logo">
+            <i class="large material-icons">home</i>Home</a></li>
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
@@ -29,7 +31,7 @@
     {% block content %}
     {% endblock %}
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer blue-grey darken-3">
     <div class="right">All Rights Reserved, &copy; 2021 Car Collector &nbsp;</div>
   </footer>
 </body>
