--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -10,19 +10,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
   <header class="navbar-fixed">
     <nav>
       <div class="nav-wrapper blue-grey darken-3">
         <ul>
-          <li><a href="/" class="left brand-logo">
+          <li><a href="{% url 'home' %}" class="left brand-logo">
             <i class="large material-icons">home</i>Home</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
           <!-- new markup below-->
-          <li><a href="/cars">Garage</a></li>
+          <li><a href="{% url 'cars_create' %}">Add a Car</a></li>
+          <li><a href="{% url 'index' %}">Garage</a></li>
         </ul>
       </div>
     </nav>
