--- a/main_app/templates/cars/details.html
+++ b/main_app/templates/cars/details.html
@@ -1,16 +1,57 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Car Collection</h1>
+<h1>Car Details</h1>
 
-<div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ car.make }}</span>
-      <p>Year: {{ car.year }}</p>
-      <p>Model: {{ car.model }}</p>
-      <p>Engine: {{ car.engine }}</p>
-      <p>Vin: {{ car.vin }}</p>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ car.make }}</span>
+        <p>Year: {{ car.year }}</p>
+        <p>Model: {{ car.model }}</p>
+        <p>Engine: {{ car.engine }}</p>
+        <p>Vin: {{ car.vin }}</p>
+      </div>
+      <div class="card-action">
+        <a href="{% url 'cars_update' car.id %}">Edit</a>
+        <a href="{% url 'cars_delete' car.id %}">Delete</a>
+      </div>
     </div>
+  </div>
+  <div class="col s6">
+    <form method="post">
+      {% csrf_token %}
+      {{ tuneup_form.as_p }}
+      <input type="submit" class="btn" value="Add Service">
+    </form>
+  
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Service</th></tr>
+      </thead>
+      <tbody>
+        {% for tuneup in car.tuneup_set.all %}
+          <tr>
+            <td>{{tuneup.date}}</td>
+            <td>{{tuneup.get_service_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 </div>
+<script>
+  const dateEl = document.getElementById('id_date');
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
 
+  // add additional JS to initialize select below
+  const selectEl = document.getElementById('id_service');
+  M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
