--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -3,38 +3,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Car Collector</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cat Collector</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
-  <header class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper blue-grey darken-3">
-        <ul>
-          <li><a href="{% url 'home' %}" class="left brand-logo">
-            <i class="large material-icons">home</i>Home</a></li>
-        </ul>
-        <ul class="right">
-          <li><a href="{% url 'about' %}">About</a></li>
-          <!-- new markup below-->
-          <li><a href="{% url 'cars_create' %}">Add a Car</a></li>
-          <li><a href="{% url 'index' %}">Garage</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main class="container">
-    {% block content %}
-    {% endblock %}
-  </main>
-  <footer class="page-footer blue-grey darken-3">
-    <div class="right">All Rights Reserved, &copy; 2021 Car Collector &nbsp;</div>
-  </footer>
+    <header class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper">
+                <ul>
+                    <li><a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;Cat Collector</a></li>
+                </ul>
+                <ul class="right">
+                  <li><a href="{% url 'about' %}">About</a></li>
+                  <li><a href="{% url 'mods_create' %}">Add a Mod</a></li>
+                  <li><a href="{% url 'mods_index' %}">View All Mods</a></li>
+                  <li><a href="{% url 'mods_create' %}">Add a Car</a></li>
+                  <li><a href="{% url 'index' %}">Garage</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main class="container">
+        {% block content %}
+        {% endblock %}
+    </main>
+  	<footer class="page-footer">
+       <div class="right">All Rights Reserved, &copy; 2021 Cat Collector &nbsp;</div>
+    </footer>
 </body>
 </html>
