--- a/main_app/templates/cars/details.html
+++ b/main_app/templates/cars/details.html
@@ -44,22 +44,22 @@
 <hr>
 <div class="row">
   <div class="col s6">
-    <h3>{{ cat.name }}'s Toys</h3>
-    {% if cat.toys.count %}
-    {% for toy in cat.toys.all %}
+    <h3>{{ car.name }}'s Mods</h3>
+    {% if car.mods.count %}
+    {% for mods in car.mods.all %}
     <div class="card">
       <div class="card-content">
         <span class="card-title">
-          A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+          A <span>{{ mod.brand }}</span> {{ mod.description }}
         </span>
       </div>
     </div>
     {% endfor %}
     {% else %}
-    <h5>No Toys :(</h5>
+    <h5>No Mods :(</h5>
     {% endif %}
   </div>
-  <!-- Available toys will come after this line -->
+  <!-- Available mods will come after this line -->
   <div class="col s6">
     <h3>Available Mods</h3>
     {% if mods.count %}
