Adds S3 file upload

--- a/main_app/templates/main_app/mod_list.html
+++ b/main_app/templates/main_app/mod_list.html
@@ -8,7 +8,7 @@
     <div class="card">
         <div class="card-content">
             <span class="card-title">{{ mod.brand }}</span>
-            <p>Description: {{ mod.descritpion }}</p>
+            <p>Description: {{ mod.description}}</p>
             <p>Category: {{mod.category}}</p>
         </div>
     </div>
