--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,7 +22,7 @@
                   <li><a href="{% url 'about' %}">About</a></li>
                   <li><a href="{% url 'mods_create' %}">Add a Mod</a></li>
                   <li><a href="{% url 'mods_index' %}">View All Mods</a></li>
-                  <li><a href="{% url 'mods_create' %}">Add a Car</a></li>
+                  <li><a href="{% url 'cars_create' %}">Add a Car</a></li>
                   <li><a href="{% url 'index' %}">Garage</a></li>
                 </ul>
             </div>
