--- a/main_app/templates/cars/details.html
+++ b/main_app/templates/cars/details.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="col s6">
-    <form method="post">
+    <form action="{% url 'add_tuneup' car.id%}" method="post">
       {% csrf_token %}
       {{ tuneup_form.as_p }}
       <input type="submit" class="btn" value="Add Service">
@@ -44,9 +44,9 @@
 <hr>
 <div class="row">
   <div class="col s6">
-    <h3>{{ car.name }}'s Mods</h3>
+    <h3>{{ car.model }}'s Mods</h3>
     {% if car.mods.count %}
-    {% for mods in car.mods.all %}
+    {% for mod in car.mods.all %}
     <div class="card">
       <div class="card-content">
         <span class="card-title">
@@ -68,8 +68,6 @@
       <div class="card-content">
         <span class="card-title">{{ mod.brand }}</span>
         <p>Description: {{ mod.description }}</p>
-        <hr>
-        <p>Category: {{mod.category}} </p>
       </div>
       <div class="card-action">
         <form action="{% url 'assoc_mod' car.id mod.id %}" method="post">
@@ -80,7 +78,7 @@
     </div>
     {% endfor %}
     {% else %}
-    <h5>{{car.name}} Already Has All Mods Available</h5>
+    <h5>{{car.model}} Already Has All Mods Available</h5>
     {% endif %}
   </div>
 </div>
