--- a/main_app/templates/main_app/mod_form.html
+++ b/main_app/templates/main_app/mod_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   {% if object %}
-    <h1>Edit <span class="teal-text">{{object.brand}}</span></h1>
+    <h1>Edit <span class="teal-text">{{object.description}}</span></h1>
   {% else %}
     <h1>Add Mod</h1>
   {% endif %}
