--- a/main_app/templates/cars/details.html
+++ b/main_app/templates/cars/details.html
@@ -18,6 +18,20 @@
         <a href="{% url 'cars_delete' car.id %}">Delete</a>
       </div>
     </div>
+    <!-- Insert photo markup below this comment -->
+    {% for photo in car.photo_set.all %}
+    <img class="responsive-img card-panel" src="{{photo.url}}">
+    {% empty %}
+    <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+    {% endfor %}
+
+    <!-- new code below -->
+    <form action="{% url 'add_photo' car.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+      {% csrf_token %}
+      <input type="file" name="photo-file">
+      <br><br>
+      <input type="submit" class="btn" value="Upload Photo">
+    </form>
   </div>
   <div class="col s6">
     <form action="{% url 'add_tuneup' car.id%}" method="post">
@@ -25,17 +39,20 @@
       {{ tuneup_form.as_p }}
       <input type="submit" class="btn" value="Add Service">
     </form>
-  
+
     <table class="striped">
       <thead>
-        <tr><th>Date</th><th>Service</th></tr>
+        <tr>
+          <th>Date</th>
+          <th>Service</th>
+        </tr>
       </thead>
       <tbody>
         {% for tuneup in car.tuneup_set.all %}
-          <tr>
-            <td>{{tuneup.date}}</td>
-            <td>{{tuneup.get_service_display}}</td>
-          </tr>
+        <tr>
+          <td>{{tuneup.date}}</td>
+          <td>{{tuneup.get_service_display}}</td>
+        </tr>
         {% endfor %}
       </tbody>
     </table>
@@ -72,8 +89,8 @@
       <div class="card-action">
         <form action="{% url 'assoc_mod' car.id mod.id %}" method="post">
           {% csrf_token %}
-        <button type="submit" class="btn">Add</button>
-      </form>
+          <button type="submit" class="btn">Add</button>
+        </form>
       </div>
     </div>
     {% endfor %}
